# cablescout

./: Cargo.toml  README.md
.github/workflows/: ci.yaml  release.yaml  test.yaml
api/: Cargo.toml  build.rs
api/proto/: daemon.proto
api/src/: daemon.rs  lib.rs  server.rs
app/: forge.config.js  package.json  tsconfig.json
app/src/: add-tunnel.ts  client.ts  config.js  config.ts  daemon.ts  login.js  login.ts  main.js  main.ts  status.js  status.ts  stupid-ini.js  stupid-ini.ts  sudo.ts  tray.ts  tunnel.js  tunnel.ts  wg.js  wg.ts
app/src/daemon/: darwin.ts  index.ts  utils.ts  win32.ts
app/src/tray-icon/: Cablescout.Tray.afdesign
cli/: Cargo.toml
cli/src/: commands.rs  config.rs  key_pair.rs  main.rs  tunnel.rs  wg_quick.rs
daemon/: Cargo.toml
daemon/src/: config.rs  http.rs  main.rs  server.rs  tunnel.rs
server/: Cargo.toml
server/src/: api.rs  api_result.rs  login.rs  main.rs  sessions.rs  tokens.rs  wireguard.rs
server/src/pages/: finish.html
src/: config.rs  main.rs  tunnel.rs
wg-utils/: Cargo.toml
wg-utils/src/: key_pair.rs  lib.rs  wg_config.rs  wg_quick.rs
