[package]
name = "cablescout-cli"
version = "0.1.0"
authors = ["Zohar Zilberman <popen2@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.40"
reqwest = "0.11.3"
serde = { version = "1.0", features = ["derive"] }
serde_ini = "0.2.0"
serde_json = "1.0.64"
serde_yaml = "0.8.17"
shellexpand = "2.1.0"
structopt = "0.3.21"
