[package]
name = "cablescout-api"
version = "0.1.0"
authors = ["Zohar Zilberman <popen2@gmail.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
ipnetwork = "0.18.0"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
wg-utils = { path = "../wg-utils" }
