[package]
name = "cablescout-api"
version = "0.1.0"
authors = ["Zohar Zilberman <popen2@gmail.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
ipnetwork = "0.18.0"
prost = "0.7.0"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
tonic = "0.4.3"
url = { version = "2.2.1", features = ["serde"] }
uuid = { version = "0.8.2", features = ["serde"] }
wg-utils = { path = "../wg-utils" }

[build-dependencies]
tonic-build = "0.4"
