[package]
name = "cablescout-server"
version = "0.1.0"
authors = ["Zohar Zilberman <popen2@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = { version = "4.0.0-beta.6", features = ["rustls"] }
anyhow = "1.0.40"
cablescout-api = { path = "../api" }
chrono = { version = "0.4.19", features = ["serde", "std"] }
derive_more = "0.99.13"
email-address-parser = "1.0.1"
env_logger = "0.8.3"
humantime = "2.1.0"
ipnetwork = "0.18.0"
itertools = "0.10.0"
jsonwebtoken = "7.2.0"
log = "0.4.14"
mime = "0.3.16"
openid = { version = "0.9", default-features = false, features = ["rustls"] }
rand = "0.8.3"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
structopt = "0.3.21"
thiserror = "1.0.24"
tokio = { version = "1", features = ["sync", "time", "macros"] }
url = "2.2.1"
uuid = { version = "0.8.2", features = ["serde"] }
wg-utils = { path = "../wg-utils" }

[dev-dependencies]
test-env-log = "0.2.7"
tokio = { version = "1", features = ["test-util"] }
uuid = { version = "0.8.2", features = ["v4"] }
